--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -604,7 +604,7 @@
 
 .bedCard {
     width: 400px;
-    height: 500px;
+    height: 530px;
     border-radius: 16px;
     padding: 6px;
     background-color: #00acc1; /* teal look like your example */
@@ -1183,3 +1183,34 @@
     font-weight: 500;
     color: #1a73e8;
 }
+
+
+/* Optional: make it look like a tag/badge */
+.bedCardAreaTag {
+    display: inline-block;
+    background-color: #f3f3f3;
+    padding: 4px 10px;
+    border-radius: 8px;
+    font-size: 13px;
+    color: #444;
+    margin-top: 6px;
+}
+
+.imageWrapper {
+    position: relative;
+}
+
+.areaTagBox {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background:#00acc1; /* blue tag */
+    padding: 4px 10px;
+    border-radius: 12px;
+    color: white;
+    font-size: 0.75rem;
+    font-weight: bold;
+    z-index: 10;
+}
+
+
